e2e/tests/snapshots/npm_test____test_context_wrapped_should_exec_npm_when_use_e1_env.snap
---
source: e2e/tests/npm_test.rs
expression: res
---
id: 1
is: snm node install 20.0.0


stdout:🎉 Node v20.0.0 is installed
stderr:
status:0


id: 2
is: snm node default 20.0.0


stdout:🎉 Node v20.0.0 is now default
stderr:
status:0


id: 3
is: npm -v


stdout:
stderr:Error: Package manager mismatch, expect: pnpm, actual: npm
status:1
