e2e/tests/snapshots/npm_test____test_context_wrapped_should_show_v_when_pm_configure_npm9.snap
---
source: e2e/tests/npm_test.rs
expression: res
---
id: 1
is: snm node install 20.0.0


stdout:🎉 Node v20.0.0 is installed
stderr:
status:exit status: 0


id: 2
is: snm node default 20.0.0


stdout:🎉 Node v20.0.0 is now default
stderr:
status:exit status: 0


id: 3
is: npm -v


stdout:9.0.0
stderr:
status:exit status: 0
