e2e/tests/snapshots/npm_test____test_context_wrapped_test_show_npm_version_when_default_npm_missing_but_node_exists.snap
---
source: e2e/tests/npm_test.rs
expression: res
---
id: 1
is: snm node install 20.0.0


stdout:🎉 Node v20.0.0 is installed
stderr:
status:exit status: 0


id: 2
is: snm node default 20.0.0


stdout:🎉 Node v20.0.0 is now default
stderr:
status:exit status: 0


id: 3
is: npm -v


stdout:9.6.4
stderr:
status:exit status: 0
