e2e/tests/snapshots/npm_test____test_context_wrapped_test_show_npm_version_when_missing_default_node_and_npm.snap
---
source: e2e/tests/npm_test.rs
expression: res
---
id: 1
is: npm -v


stdout:
stderr:Error: No default Node.js version found
